cloudformation_stack.tf
resource "aws_cloudformation_stack" "tfer--pipeline-002D-eks-002D-iam-002D-m4je2o0jwty6e" {
  capabilities     = ["CAPABILITY_IAM", "CAPABILITY_NAMED_IAM"]
  disable_rollback = "true"
  name             = "pipeline-eks-iam-m4je2o0jwty6e"

  outputs = {
    ClusterRoleArn      = "arn:aws:iam::377481363432:role/pipeline-eks-iam-m4je2o0jwty6e-ClusterRole-NXW9OZ2CSKQ"
    ClusterUserArn      = "arn:aws:iam::377481363432:user/m4je2o0jwty6e"
    NodeInstanceRoleArn = "arn:aws:iam::377481363432:role/pipeline-eks-iam-m4je2o0jwty6e-NodeInstanceRole-4MBONOX6FE02"
    NodeInstanceRoleId  = "pipeline-eks-iam-m4je2o0jwty6e-NodeInstanceRole-4MBONOX6FE02"
  }

  tags = {
    banzaicloud-pipeline-cluster-name = "m4je2o0jwty6e"
    banzaicloud-pipeline-managed      = "true"
    banzaicloud-pipeline-stack-type   = "vpc"
    banzaicloud-pipeline-uuid         = "e9f93691-caef-4f62-93c3-fc735a79beb5"
  }

  template_body      = "AWSTemplateFormatVersion: '2010-09-09'\nDescription: 'Amazon EKS IAM'\n\nParameters:\n  ClusterName:\n    Type: String\n    Description: The name of the EKS cluster.\n\n  UserId:\n    Type: String\n    Description: The user ID provided to set as cluster admin.\n    Default: \"\"\n\n  UserPath:\n    Type: String\n    Description: The path of the provided user to set as cluster admin.\n    Default: \"/\"\n\n  ClusterRoleId:\n    Type: String\n    Description: The role ID pr [...]
  timeout_in_minutes = "10"
}

resource "aws_cloudformation_stack" "tfer--pipeline-002D-eks-002D-m4je2o0jwty6e" {
  disable_rollback = "true"
  name             = "pipeline-eks-m4je2o0jwty6e"

  outputs = {
    NodeSecurityGroup = "sg-007d703253c235022"
    RouteTableId      = "rtb-0b3d3913a72b383ce"
    SecurityGroups    = "sg-0d55a6c7ed9fd45ec"
    VpcId             = "vpc-063de654fdde6412d"
  }

  tags = {
    banzaicloud-pipeline-cluster-name = "m4je2o0jwty6e"
    banzaicloud-pipeline-managed      = "true"
    banzaicloud-pipeline-stack-type   = "vpc"
    banzaicloud-pipeline-uuid         = "e9f93691-caef-4f62-93c3-fc735a79beb5"
  }

  template_body      = "---\nAWSTemplateFormatVersion: '2010-09-09'\nDescription: 'Amazon EKS VPC'\n\nParameters:\n\n  ClusterName:\n    Description: The cluster name provided when the cluster was created.  If it is incorrect, nodes will not be able to join the cluster.\n    Type: String\n\n  VpcId:\n    Type: String\n    Description: The VPC to be used instead of creating a new one.\n    Default: \"\"\n\n  RouteTableId:\n    Type: String\n    Default: \"\"\n    Description: Id of the RouteTable [...]
  timeout_in_minutes = "10"
}

resource "aws_cloudformation_stack" "tfer--pipeline-002D-eks-002D-nodepool-002D-m4je2o0jwty6e-002D-pool1" {
  capabilities     = ["CAPABILITY_IAM"]
  disable_rollback = "true"
  name             = "pipeline-eks-nodepool-m4je2o0jwty6e-pool1"

  tags = {
    banzaicloud-pipeline-cluster-name = "m4je2o0jwty6e"
    banzaicloud-pipeline-managed      = "true"
    banzaicloud-pipeline-stack-type   = "nodepool"
    banzaicloud-pipeline-uuid         = "e9f93691-caef-4f62-93c3-fc735a79beb5"
  }

  template_body      = "---\nAWSTemplateFormatVersion: '2010-09-09'\nDescription: 'Amazon EKS - Node Group'\n\nParameters:\n\n  KeyName:\n    Description: The EC2 Key Pair to allow SSH access to the instances\n    Type: AWS::EC2::KeyPair::KeyName\n\n  NodeImageId:\n    Type: AWS::EC2::Image::Id\n    Description: AMI id for the node instances.\n\n  NodeInstanceType:\n    Description: EC2 instance type for the node instances\n    Type: String\n    Default: t2.medium\n    AllowedValues:\n    - t2.s [...]
  timeout_in_minutes = "10"
}

resource "aws_cloudformation_stack" "tfer--pipeline-002D-eks-002D-subnet-002D-m4je2o0jwty6e-002D-192-002D-168-002D-64-002D-0-002D-20" {
  disable_rollback = "true"
  name             = "pipeline-eks-subnet-m4je2o0jwty6e-192-168-64-0-20"

  outputs = {
    SubnetId = "subnet-0dc298e7f9b88c2b0"
  }

  tags = {
    banzaicloud-pipeline-cluster-name = "m4je2o0jwty6e"
    banzaicloud-pipeline-managed      = "true"
    banzaicloud-pipeline-stack-type   = "subnet"
    banzaicloud-pipeline-uuid         = "e9f93691-caef-4f62-93c3-fc735a79beb5"
  }

  template_body      = "---\nAWSTemplateFormatVersion: '2010-09-09'\nDescription: 'Amazon EKS Subnet'\n\nParameters:\n  VpcId:\n    Type: AWS::EC2::VPC::Id\n    Description: The VPC to create the subnet within\n\n  RouteTableId:\n    Type: String\n    Description: The Id of the route table to associate the subnet with\n\n  SubnetBlock:\n    Type: String\n    Default: 192.168.64.0/20\n    Description: CidrBlock for subnet within the VPC\n\n  AvailabilityZoneName:\n    Type: String\n    Descriptio [...]
  timeout_in_minutes = "10"
}

resource "aws_cloudformation_stack" "tfer--pipeline-002D-eks-002D-subnet-002D-m4je2o0jwty6e-002D-192-002D-168-002D-80-002D-0-002D-20" {
  disable_rollback = "true"
  name             = "pipeline-eks-subnet-m4je2o0jwty6e-192-168-80-0-20"

  outputs = {
    SubnetId = "subnet-0099b3ef85aa62e65"
  }

  tags = {
    banzaicloud-pipeline-cluster-name = "m4je2o0jwty6e"
    banzaicloud-pipeline-managed      = "true"
    banzaicloud-pipeline-stack-type   = "subnet"
    banzaicloud-pipeline-uuid         = "e9f93691-caef-4f62-93c3-fc735a79beb5"
  }

  template_body      = "---\nAWSTemplateFormatVersion: '2010-09-09'\nDescription: 'Amazon EKS Subnet'\n\nParameters:\n  VpcId:\n    Type: AWS::EC2::VPC::Id\n    Description: The VPC to create the subnet within\n\n  RouteTableId:\n    Type: String\n    Description: The Id of the route table to associate the subnet with\n\n  SubnetBlock:\n    Type: String\n    Default: 192.168.64.0/20\n    Description: CidrBlock for subnet within the VPC\n\n  AvailabilityZoneName:\n    Type: String\n    Descriptio [...]
  timeout_in_minutes = "10"
}
